# redditsfinder

./: .gitignore  LICENSE  README.md  __main__.py  after_run_parsing.py  args  install  install.sh  meat  meat.py  push.py  pyproject.toml  redditsfinder  redditsfinder.py  redditsfinder_utils.py  spez.json  spez.txt  test.py  transfer_me.html  update  usersArgs  using_in_python.py
.github/workflows/: python-app.yml  requirements.txt
images/: images.md
misc/: Its_N8_Again.json
package/: README.md  pyproject.toml
package/redditsfinder/: __init__.py  after_run_parsing.py  meat.py  redditsfinder_utils.py
redditsfinder/: __init__.py  __main__.py  redditsfinder_utils.py
users/999horizon999/: all_posts.json  subreddit_count.txt
users/LovingCoupleofBugs/: all_posts.json  subreddit_count.txt
users/a/: subreddit_count.txt
users/boomerfelonowl/: images.txt
users/danielgabrielMOSUL/: all_posts.json  subreddit_count.txt
users/jonathanvr/: all_posts.json  subreddit_count.txt
users/kaydoggg/: all_posts.json  images.txt  subreddit_count.txt
users/muccinator666/: images.txt
users/y/: all_posts.json
